--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ asgiref==3.4.1
 backports.zoneinfo==0.2.1
 bootstrap4==0.1.0
 certifi==2021.10.8
+confusable-homoglyphs==3.2.0
 Django==3.2
 django-bootstrap3==21.1
+django-registration==3.2
 django-tinymce==3.4.0
 dnspython==2.1.0
 email-validator==1.1.3
@@ -12,6 +14,7 @@ h11==0.12.0
 httpcore==0.13.7
 httpx==0.18.2
 idna==3.3
+Pillow==8.4.0
 psycopg2==2.9.3
 pydantic==1.9.0
 python-dateutil==2.8.2
