--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
 anyio==3.4.0
 asgiref==3.4.1
 backports.zoneinfo==0.2.1
+beautifulsoup4==4.10.0
 bootstrap4==0.1.0
 certifi==2021.10.8
 confusable-homoglyphs==3.2.0
+dj-database-url==0.5.0
 Django==3.2
 django-bootstrap3==21.1
+django-bootstrap4==21.2
+django-heroku==0.3.1
 django-registration==3.2
+django-registration-redux==2.9
 django-tinymce==3.4.0
 dnspython==2.1.0
 email-validator==1.1.3
+gunicorn==20.1.0
 h11==0.12.0
 httpcore==0.13.7
 httpx==0.18.2
@@ -18,10 +24,13 @@ Pillow==8.4.0
 psycopg2==2.9.3
 pydantic==1.9.0
 python-dateutil==2.8.2
+python-decouple==3.5
 pytz==2021.3
 pyuploadcare==3.0.0
 rfc3986==1.5.0
 six==1.16.0
 sniffio==1.2.0
+soupsieve==2.3.1
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
+whitenoise==5.3.0
